--- a/pairs_trading_backtest.ipynb
+++ b/pairs_trading_backtest.ipynb
@@ -32,12 +32,13 @@
     "Shorting Stocks in Pairs Trading\n",
     "</h3>\n",
     "<p>\n",
-    "This section discusses the mechanics of taking a short position in a stock. A short position in a stock is a margin loan and is more\n",
-    "complicated than a long position.\n",
+    "Pairs trading is a market neutral long/short strategy where the long and short positions for a pair have approximately equal\n",
+    "dollar values when the position is opened. A profit is realized when there is mean reversion in the spread between\n",
+    "the prices of a pair.\n",
     "</p>\n",
     "<p>\n",
-    "Pairs trading is a market neutral long/short strategy where the long and short positions for a pair have approximately equal\n",
-    "dollar values when the position is opened. A profit is realized when there is mean reversion in the prices of a pair.\n",
+    "This section discusses the mechanics of taking a short position in a stock. A short position in a stock is a margin loan and is more\n",
+    "complicated than a long position.\n",
     "</p>\n",
     "<p>\n",
     "When a stock is \"shorted\", the stock is borrowed and then immediately sold, realizing cash.  For example, if 100 shares at a current market\n",
@@ -255,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 520,
+   "execution_count": 544,
    "metadata": {
     "collapsed": true
    },
@@ -611,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 521,
+   "execution_count": 545,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 522,
+   "execution_count": 546,
    "metadata": {},
    "outputs": [
     {
@@ -738,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 523,
+   "execution_count": 547,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -792,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 524,
+   "execution_count": 548,
    "outputs": [
     {
      "data": {
@@ -835,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 525,
+   "execution_count": 549,
    "outputs": [],
    "source": [
     "\n",
@@ -1594,7 +1595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 526,
+   "execution_count": 550,
    "outputs": [
     {
      "data": {
@@ -1619,7 +1620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 527,
+   "execution_count": 551,
    "outputs": [],
    "source": [
     "\n",
@@ -1729,7 +1730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 528,
+   "execution_count": 552,
    "outputs": [
     {
      "data": {
@@ -1763,7 +1764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 529,
+   "execution_count": 553,
    "outputs": [],
    "source": [
     "\n",
@@ -1856,7 +1857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 530,
+   "execution_count": 554,
    "outputs": [
     {
      "data": {
@@ -1890,7 +1891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 531,
+   "execution_count": 555,
    "outputs": [
     {
      "data": {
@@ -1929,7 +1930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 532,
+   "execution_count": 556,
    "outputs": [
     {
      "data": {
@@ -1964,7 +1965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 533,
+   "execution_count": 557,
    "outputs": [],
    "source": [
     "\n",
@@ -2022,7 +2023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 534,
+   "execution_count": 558,
    "outputs": [
     {
      "data": {
@@ -2056,7 +2057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 535,
+   "execution_count": 559,
    "outputs": [
     {
      "data": {
@@ -2091,7 +2092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 536,
+   "execution_count": 560,
    "outputs": [
     {
      "name": "stdout",
@@ -2144,7 +2145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 537,
+   "execution_count": 561,
    "outputs": [],
    "source": [
     "\n",
@@ -2223,7 +2224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 538,
+   "execution_count": 562,
    "outputs": [
     {
      "data": {
@@ -2254,7 +2255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 539,
+   "execution_count": 563,
    "outputs": [],
    "source": [
     "\n",
@@ -2309,7 +2310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 540,
+   "execution_count": 564,
    "outputs": [
     {
      "data": {
@@ -2366,7 +2367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 541,
+   "execution_count": 565,
    "outputs": [],
    "source": [
     "\n",
@@ -2418,7 +2419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 542,
+   "execution_count": 566,
    "outputs": [],
    "source": [
     "#\n",
@@ -2451,14 +2452,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 543,
+   "execution_count": 567,
    "outputs": [
     {
      "data": {
-      "text/plain": "<pandas.io.formats.style.Styler at 0x7f46b7361f00>",
-      "text/html": "<style type=\"text/css\">\n</style>\n<table id=\"T_1d663\">\n  <thead>\n    <tr>\n      <th class=\"blank level0\" >&nbsp;</th>\n      <th id=\"T_1d663_level0_col0\" class=\"col_heading level0 col0\" >Pairs</th>\n      <th id=\"T_1d663_level0_col1\" class=\"col_heading level0 col1\" >Random</th>\n      <th id=\"T_1d663_level0_col2\" class=\"col_heading level0 col2\" >SPY</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th id=\"T_1d663_level0_row0\" class=\"row_heading level0 row0\" >2007</th>\n      <td id=\"T_1d663_row0_col0\" class=\"data row0 col0\" >1.12</td>\n      <td id=\"T_1d663_row0_col1\" class=\"data row0 col1\" >5.74</td>\n      <td id=\"T_1d663_row0_col2\" class=\"data row0 col2\" >-3.12</td>\n    </tr>\n    <tr>\n      <th id=\"T_1d663_level0_row1\" class=\"row_heading level0 row1\" >2008</th>\n      <td id=\"T_1d663_row1_col0\" class=\"data row1 col0\" >36.89</td>\n      <td id=\"T_1d663_row1_col1\" class=\"data row1 col1\" >3.55</td>\n      <td id=\"T_1d663_row1_col2\" class=\"data row1 col2\" >-37.74</td>\n    </tr>\n    <tr>\n      <th id=\"T_1d663_level0_row2\" class=\"row_heading level0 row2\" >2009</th>\n      <td id=\"T_1d663_row2_col0\" class=\"data row2 col0\" >-2.88</td>\n      <td id=\"T_1d663_row2_col1\" class=\"data row2 col1\" >23.72</td>\n      <td id=\"T_1d663_row2_col2\" class=\"data row2 col2\" >19.88</td>\n    </tr>\n    <tr>\n      <th id=\"T_1d663_level0_row3\" class=\"row_heading level0 row3\" >2010</th>\n      <td id=\"T_1d663_row3_col0\" class=\"data row3 col0\" >9.06</td>\n      <td id=\"T_1d663_row3_col1\" class=\"data row3 col1\" >4.00</td>\n      <td id=\"T_1d663_row3_col2\" class=\"data row3 col2\" >10.96</td>\n    </tr>\n    <tr>\n      <th id=\"T_1d663_level0_row4\" class=\"row_heading level0 row4\" >2011</th>\n      <td id=\"T_1d663_row4_col0\" class=\"data row4 col0\" >-5.36</td>\n      <td id=\"T_1d663_row4_col1\" class=\"data row4 col1\" >11.63</td>\n      <td id=\"T_1d663_row4_col2\" class=\"data row4 col2\" >-1.22</td>\n    </tr>\n    <tr>\n      <th id=\"T_1d663_level0_row5\" class=\"row_heading level0 row5\" >2012</th>\n      <td id=\"T_1d663_row5_col0\" class=\"data row5 col0\" >3.32</td>\n      <td id=\"T_1d663_row5_col1\" class=\"data row5 col1\" >-3.09</td>\n      <td id=\"T_1d663_row5_col2\" class=\"data row5 col2\" >11.69</td>\n    </tr>\n    <tr>\n      <th id=\"T_1d663_level0_row6\" class=\"row_heading level0 row6\" >2013</th>\n      <td id=\"T_1d663_row6_col0\" class=\"data row6 col0\" >16.05</td>\n      <td id=\"T_1d663_row6_col1\" class=\"data row6 col1\" >7.87</td>\n      <td id=\"T_1d663_row6_col2\" class=\"data row6 col2\" >26.45</td>\n    </tr>\n    <tr>\n      <th id=\"T_1d663_level0_row7\" class=\"row_heading level0 row7\" >2014</th>\n      <td id=\"T_1d663_row7_col0\" class=\"data row7 col0\" >0.71</td>\n      <td id=\"T_1d663_row7_col1\" class=\"data row7 col1\" >16.44</td>\n      <td id=\"T_1d663_row7_col2\" class=\"data row7 col2\" >12.37</td>\n    </tr>\n    <tr>\n      <th id=\"T_1d663_level0_row8\" class=\"row_heading level0 row8\" >2015</th>\n      <td id=\"T_1d663_row8_col0\" class=\"data row8 col0\" >14.09</td>\n      <td id=\"T_1d663_row8_col1\" class=\"data row8 col1\" >4.27</td>\n      <td id=\"T_1d663_row8_col2\" class=\"data row8 col2\" >-0.76</td>\n    </tr>\n    <tr>\n      <th id=\"T_1d663_level0_row9\" class=\"row_heading level0 row9\" >2016</th>\n      <td id=\"T_1d663_row9_col0\" class=\"data row9 col0\" >12.56</td>\n      <td id=\"T_1d663_row9_col1\" class=\"data row9 col1\" >9.82</td>\n      <td id=\"T_1d663_row9_col2\" class=\"data row9 col2\" >11.20</td>\n    </tr>\n    <tr>\n      <th id=\"T_1d663_level0_row10\" class=\"row_heading level0 row10\" >2017</th>\n      <td id=\"T_1d663_row10_col0\" class=\"data row10 col0\" >-0.35</td>\n      <td id=\"T_1d663_row10_col1\" class=\"data row10 col1\" >3.12</td>\n      <td id=\"T_1d663_row10_col2\" class=\"data row10 col2\" >18.48</td>\n    </tr>\n    <tr>\n      <th id=\"T_1d663_level0_row11\" class=\"row_heading level0 row11\" >2018</th>\n      <td id=\"T_1d663_row11_col0\" class=\"data row11 col0\" >4.36</td>\n      <td id=\"T_1d663_row11_col1\" class=\"data row11 col1\" >-4.86</td>\n      <td id=\"T_1d663_row11_col2\" class=\"data row11 col2\" >-7.01</td>\n    </tr>\n    <tr>\n      <th id=\"T_1d663_level0_row12\" class=\"row_heading level0 row12\" >2019</th>\n      <td id=\"T_1d663_row12_col0\" class=\"data row12 col0\" >13.26</td>\n      <td id=\"T_1d663_row12_col1\" class=\"data row12 col1\" >3.54</td>\n      <td id=\"T_1d663_row12_col2\" class=\"data row12 col2\" >28.65</td>\n    </tr>\n    <tr>\n      <th id=\"T_1d663_level0_row13\" class=\"row_heading level0 row13\" >2020</th>\n      <td id=\"T_1d663_row13_col0\" class=\"data row13 col0\" >4.06</td>\n      <td id=\"T_1d663_row13_col1\" class=\"data row13 col1\" >22.04</td>\n      <td id=\"T_1d663_row13_col2\" class=\"data row13 col2\" >15.09</td>\n    </tr>\n    <tr>\n      <th id=\"T_1d663_level0_row14\" class=\"row_heading level0 row14\" >2021</th>\n      <td id=\"T_1d663_row14_col0\" class=\"data row14 col0\" >-8.24</td>\n      <td id=\"T_1d663_row14_col1\" class=\"data row14 col1\" >0.43</td>\n      <td id=\"T_1d663_row14_col2\" class=\"data row14 col2\" >28.79</td>\n    </tr>\n    <tr>\n      <th id=\"T_1d663_level0_row15\" class=\"row_heading level0 row15\" >2022</th>\n      <td id=\"T_1d663_row15_col0\" class=\"data row15 col0\" >4.17</td>\n      <td id=\"T_1d663_row15_col1\" class=\"data row15 col1\" >-5.23</td>\n      <td id=\"T_1d663_row15_col2\" class=\"data row15 col2\" >-19.95</td>\n    </tr>\n    <tr>\n      <th id=\"T_1d663_level0_row16\" class=\"row_heading level0 row16\" >Mean</th>\n      <td id=\"T_1d663_row16_col0\" class=\"data row16 col0\" >6.43</td>\n      <td id=\"T_1d663_row16_col1\" class=\"data row16 col1\" >6.44</td>\n      <td id=\"T_1d663_row16_col2\" class=\"data row16 col2\" >7.11</td>\n    </tr>\n    <tr>\n      <th id=\"T_1d663_level0_row17\" class=\"row_heading level0 row17\" >Median</th>\n      <td id=\"T_1d663_row17_col0\" class=\"data row17 col0\" >4.12</td>\n      <td id=\"T_1d663_row17_col1\" class=\"data row17 col1\" >4.14</td>\n      <td id=\"T_1d663_row17_col2\" class=\"data row17 col2\" >11.44</td>\n    </tr>\n  </tbody>\n</table>\n"
+      "text/plain": "<pandas.io.formats.style.Styler at 0x7f46b25b43a0>",
+      "text/html": "<style type=\"text/css\">\n</style>\n<table id=\"T_a417a\">\n  <thead>\n    <tr>\n      <th class=\"blank level0\" >&nbsp;</th>\n      <th id=\"T_a417a_level0_col0\" class=\"col_heading level0 col0\" >Pairs</th>\n      <th id=\"T_a417a_level0_col1\" class=\"col_heading level0 col1\" >Random</th>\n      <th id=\"T_a417a_level0_col2\" class=\"col_heading level0 col2\" >SPY</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th id=\"T_a417a_level0_row0\" class=\"row_heading level0 row0\" >2007</th>\n      <td id=\"T_a417a_row0_col0\" class=\"data row0 col0\" >1.12</td>\n      <td id=\"T_a417a_row0_col1\" class=\"data row0 col1\" >5.74</td>\n      <td id=\"T_a417a_row0_col2\" class=\"data row0 col2\" >-3.12</td>\n    </tr>\n    <tr>\n      <th id=\"T_a417a_level0_row1\" class=\"row_heading level0 row1\" >2008</th>\n      <td id=\"T_a417a_row1_col0\" class=\"data row1 col0\" >36.89</td>\n      <td id=\"T_a417a_row1_col1\" class=\"data row1 col1\" >3.55</td>\n      <td id=\"T_a417a_row1_col2\" class=\"data row1 col2\" >-37.74</td>\n    </tr>\n    <tr>\n      <th id=\"T_a417a_level0_row2\" class=\"row_heading level0 row2\" >2009</th>\n      <td id=\"T_a417a_row2_col0\" class=\"data row2 col0\" >-2.88</td>\n      <td id=\"T_a417a_row2_col1\" class=\"data row2 col1\" >23.72</td>\n      <td id=\"T_a417a_row2_col2\" class=\"data row2 col2\" >19.88</td>\n    </tr>\n    <tr>\n      <th id=\"T_a417a_level0_row3\" class=\"row_heading level0 row3\" >2010</th>\n      <td id=\"T_a417a_row3_col0\" class=\"data row3 col0\" >9.06</td>\n      <td id=\"T_a417a_row3_col1\" class=\"data row3 col1\" >4.00</td>\n      <td id=\"T_a417a_row3_col2\" class=\"data row3 col2\" >10.96</td>\n    </tr>\n    <tr>\n      <th id=\"T_a417a_level0_row4\" class=\"row_heading level0 row4\" >2011</th>\n      <td id=\"T_a417a_row4_col0\" class=\"data row4 col0\" >-5.36</td>\n      <td id=\"T_a417a_row4_col1\" class=\"data row4 col1\" >11.63</td>\n      <td id=\"T_a417a_row4_col2\" class=\"data row4 col2\" >-1.22</td>\n    </tr>\n    <tr>\n      <th id=\"T_a417a_level0_row5\" class=\"row_heading level0 row5\" >2012</th>\n      <td id=\"T_a417a_row5_col0\" class=\"data row5 col0\" >3.32</td>\n      <td id=\"T_a417a_row5_col1\" class=\"data row5 col1\" >-3.09</td>\n      <td id=\"T_a417a_row5_col2\" class=\"data row5 col2\" >11.69</td>\n    </tr>\n    <tr>\n      <th id=\"T_a417a_level0_row6\" class=\"row_heading level0 row6\" >2013</th>\n      <td id=\"T_a417a_row6_col0\" class=\"data row6 col0\" >16.05</td>\n      <td id=\"T_a417a_row6_col1\" class=\"data row6 col1\" >7.87</td>\n      <td id=\"T_a417a_row6_col2\" class=\"data row6 col2\" >26.45</td>\n    </tr>\n    <tr>\n      <th id=\"T_a417a_level0_row7\" class=\"row_heading level0 row7\" >2014</th>\n      <td id=\"T_a417a_row7_col0\" class=\"data row7 col0\" >0.71</td>\n      <td id=\"T_a417a_row7_col1\" class=\"data row7 col1\" >16.44</td>\n      <td id=\"T_a417a_row7_col2\" class=\"data row7 col2\" >12.37</td>\n    </tr>\n    <tr>\n      <th id=\"T_a417a_level0_row8\" class=\"row_heading level0 row8\" >2015</th>\n      <td id=\"T_a417a_row8_col0\" class=\"data row8 col0\" >14.09</td>\n      <td id=\"T_a417a_row8_col1\" class=\"data row8 col1\" >4.27</td>\n      <td id=\"T_a417a_row8_col2\" class=\"data row8 col2\" >-0.76</td>\n    </tr>\n    <tr>\n      <th id=\"T_a417a_level0_row9\" class=\"row_heading level0 row9\" >2016</th>\n      <td id=\"T_a417a_row9_col0\" class=\"data row9 col0\" >12.56</td>\n      <td id=\"T_a417a_row9_col1\" class=\"data row9 col1\" >9.82</td>\n      <td id=\"T_a417a_row9_col2\" class=\"data row9 col2\" >11.20</td>\n    </tr>\n    <tr>\n      <th id=\"T_a417a_level0_row10\" class=\"row_heading level0 row10\" >2017</th>\n      <td id=\"T_a417a_row10_col0\" class=\"data row10 col0\" >-0.35</td>\n      <td id=\"T_a417a_row10_col1\" class=\"data row10 col1\" >3.12</td>\n      <td id=\"T_a417a_row10_col2\" class=\"data row10 col2\" >18.48</td>\n    </tr>\n    <tr>\n      <th id=\"T_a417a_level0_row11\" class=\"row_heading level0 row11\" >2018</th>\n      <td id=\"T_a417a_row11_col0\" class=\"data row11 col0\" >4.36</td>\n      <td id=\"T_a417a_row11_col1\" class=\"data row11 col1\" >-4.86</td>\n      <td id=\"T_a417a_row11_col2\" class=\"data row11 col2\" >-7.01</td>\n    </tr>\n    <tr>\n      <th id=\"T_a417a_level0_row12\" class=\"row_heading level0 row12\" >2019</th>\n      <td id=\"T_a417a_row12_col0\" class=\"data row12 col0\" >13.26</td>\n      <td id=\"T_a417a_row12_col1\" class=\"data row12 col1\" >3.54</td>\n      <td id=\"T_a417a_row12_col2\" class=\"data row12 col2\" >28.65</td>\n    </tr>\n    <tr>\n      <th id=\"T_a417a_level0_row13\" class=\"row_heading level0 row13\" >2020</th>\n      <td id=\"T_a417a_row13_col0\" class=\"data row13 col0\" >4.06</td>\n      <td id=\"T_a417a_row13_col1\" class=\"data row13 col1\" >22.04</td>\n      <td id=\"T_a417a_row13_col2\" class=\"data row13 col2\" >15.09</td>\n    </tr>\n    <tr>\n      <th id=\"T_a417a_level0_row14\" class=\"row_heading level0 row14\" >2021</th>\n      <td id=\"T_a417a_row14_col0\" class=\"data row14 col0\" >-8.24</td>\n      <td id=\"T_a417a_row14_col1\" class=\"data row14 col1\" >0.43</td>\n      <td id=\"T_a417a_row14_col2\" class=\"data row14 col2\" >28.79</td>\n    </tr>\n    <tr>\n      <th id=\"T_a417a_level0_row15\" class=\"row_heading level0 row15\" >2022</th>\n      <td id=\"T_a417a_row15_col0\" class=\"data row15 col0\" >4.17</td>\n      <td id=\"T_a417a_row15_col1\" class=\"data row15 col1\" >-5.23</td>\n      <td id=\"T_a417a_row15_col2\" class=\"data row15 col2\" >-19.95</td>\n    </tr>\n    <tr>\n      <th id=\"T_a417a_level0_row16\" class=\"row_heading level0 row16\" >Mean</th>\n      <td id=\"T_a417a_row16_col0\" class=\"data row16 col0\" >6.43</td>\n      <td id=\"T_a417a_row16_col1\" class=\"data row16 col1\" >6.44</td>\n      <td id=\"T_a417a_row16_col2\" class=\"data row16 col2\" >7.11</td>\n    </tr>\n    <tr>\n      <th id=\"T_a417a_level0_row17\" class=\"row_heading level0 row17\" >Median</th>\n      <td id=\"T_a417a_row17_col0\" class=\"data row17 col0\" >4.12</td>\n      <td id=\"T_a417a_row17_col1\" class=\"data row17 col1\" >4.14</td>\n      <td id=\"T_a417a_row17_col2\" class=\"data row17 col2\" >11.44</td>\n    </tr>\n  </tbody>\n</table>\n"
      },
-     "execution_count": 543,
+     "execution_count": 567,
      "metadata": {},
      "output_type": "execute_result"
     }
