--- a/pairs_trading_backtest.ipynb
+++ b/pairs_trading_backtest.ipynb
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 74,
    "metadata": {
     "collapsed": true
    },
@@ -289,16 +289,19 @@
      "text": [
       "\n",
       "1 Failed download:\n",
-      "- CTXS: No data found, symbol may be delisted\n",
+      "- FBHS: No data found, symbol may be delisted\n",
       "\n",
       "1 Failed download:\n",
-      "- FBHS: No data found, symbol may be delisted\n",
+      "- CTXS: No data found, symbol may be delisted\n",
       "\n",
       "1 Failed download:\n",
       "- DRE: No data found, symbol may be delisted\n",
       "\n",
       "1 Failed download:\n",
       "- NLOK: No data found, symbol may be delisted\n",
+      "\n",
+      "1 Failed download:\n",
+      "- TWTR: No data found, symbol may be delisted\n",
       "\n",
       "1 Failed download:\n",
       "- NLSN: No data found, symbol may be delisted\n"
@@ -634,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -761,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -815,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 78,
    "outputs": [
     {
      "data": {
@@ -858,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 79,
    "outputs": [],
    "source": [
     "\n",
@@ -1617,7 +1620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 80,
    "outputs": [
     {
      "data": {
@@ -1642,7 +1645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 81,
    "outputs": [],
    "source": [
     "\n",
@@ -1752,7 +1755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 82,
    "outputs": [
     {
      "data": {
@@ -1786,7 +1789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 83,
    "outputs": [],
    "source": [
     "\n",
@@ -1879,7 +1882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 84,
    "outputs": [
     {
      "data": {
@@ -1913,7 +1916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 85,
    "outputs": [
     {
      "data": {
@@ -1952,7 +1955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 86,
    "outputs": [
     {
      "data": {
@@ -1987,7 +1990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 87,
    "outputs": [],
    "source": [
     "\n",
@@ -2045,7 +2048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 88,
    "outputs": [
     {
      "data": {
@@ -2079,7 +2082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 89,
    "outputs": [
     {
      "data": {
@@ -2114,7 +2117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 90,
    "outputs": [
     {
      "name": "stdout",
@@ -2167,7 +2170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 91,
    "outputs": [],
    "source": [
     "\n",
@@ -2246,7 +2249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 92,
    "outputs": [
     {
      "data": {
@@ -2277,7 +2280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 93,
    "outputs": [],
    "source": [
     "\n",
@@ -2320,7 +2323,7 @@
    "cell_type": "markdown",
    "source": [
     "<h2>\n",
-    "Pairs Trading vs. Spy: Five Years and One Year\n",
+    "Pairs Trading vs SPY: Five Years and One Year\n",
     "</h2>\n",
     "<p>\n",
     "The plots below show the performance of the pairs trading strategy in the last five years and the last year.\n",
@@ -2332,7 +2335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 94,
    "outputs": [
     {
      "data": {
@@ -2415,7 +2418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 95,
    "outputs": [],
    "source": [
     "\n",
@@ -2467,7 +2470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 96,
    "outputs": [],
    "source": [
     "#\n",
@@ -2491,8 +2494,11 @@
    "cell_type": "markdown",
    "source": [
     "<h2>\n",
+    "Discussion\n",
+    "</h2>\n",
+    "<h3>\n",
     "Returns for Cointegrated and Random Pairs\n",
-    "</h2>\n"
+    "</h3>\n"
    ],
    "metadata": {
     "collapsed": false
@@ -2500,14 +2506,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 97,
    "outputs": [
     {
      "data": {
-      "text/plain": "<pandas.io.formats.style.Styler at 0x7f67ae342920>",
-      "text/html": "<style type=\"text/css\">\n</style>\n<table id=\"T_33367\">\n  <thead>\n    <tr>\n      <th class=\"blank level0\" >&nbsp;</th>\n      <th id=\"T_33367_level0_col0\" class=\"col_heading level0 col0\" >Pairs</th>\n      <th id=\"T_33367_level0_col1\" class=\"col_heading level0 col1\" >Random</th>\n      <th id=\"T_33367_level0_col2\" class=\"col_heading level0 col2\" >SPY</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th id=\"T_33367_level0_row0\" class=\"row_heading level0 row0\" >2007</th>\n      <td id=\"T_33367_row0_col0\" class=\"data row0 col0\" >1.12</td>\n      <td id=\"T_33367_row0_col1\" class=\"data row0 col1\" >5.81</td>\n      <td id=\"T_33367_row0_col2\" class=\"data row0 col2\" >-3.12</td>\n    </tr>\n    <tr>\n      <th id=\"T_33367_level0_row1\" class=\"row_heading level0 row1\" >2008</th>\n      <td id=\"T_33367_row1_col0\" class=\"data row1 col0\" >36.89</td>\n      <td id=\"T_33367_row1_col1\" class=\"data row1 col1\" >3.45</td>\n      <td id=\"T_33367_row1_col2\" class=\"data row1 col2\" >-37.74</td>\n    </tr>\n    <tr>\n      <th id=\"T_33367_level0_row2\" class=\"row_heading level0 row2\" >2009</th>\n      <td id=\"T_33367_row2_col0\" class=\"data row2 col0\" >-2.88</td>\n      <td id=\"T_33367_row2_col1\" class=\"data row2 col1\" >23.63</td>\n      <td id=\"T_33367_row2_col2\" class=\"data row2 col2\" >19.88</td>\n    </tr>\n    <tr>\n      <th id=\"T_33367_level0_row3\" class=\"row_heading level0 row3\" >2010</th>\n      <td id=\"T_33367_row3_col0\" class=\"data row3 col0\" >9.06</td>\n      <td id=\"T_33367_row3_col1\" class=\"data row3 col1\" >4.18</td>\n      <td id=\"T_33367_row3_col2\" class=\"data row3 col2\" >10.96</td>\n    </tr>\n    <tr>\n      <th id=\"T_33367_level0_row4\" class=\"row_heading level0 row4\" >2011</th>\n      <td id=\"T_33367_row4_col0\" class=\"data row4 col0\" >-5.36</td>\n      <td id=\"T_33367_row4_col1\" class=\"data row4 col1\" >11.95</td>\n      <td id=\"T_33367_row4_col2\" class=\"data row4 col2\" >-1.22</td>\n    </tr>\n    <tr>\n      <th id=\"T_33367_level0_row5\" class=\"row_heading level0 row5\" >2012</th>\n      <td id=\"T_33367_row5_col0\" class=\"data row5 col0\" >3.32</td>\n      <td id=\"T_33367_row5_col1\" class=\"data row5 col1\" >-3.18</td>\n      <td id=\"T_33367_row5_col2\" class=\"data row5 col2\" >11.69</td>\n    </tr>\n    <tr>\n      <th id=\"T_33367_level0_row6\" class=\"row_heading level0 row6\" >2013</th>\n      <td id=\"T_33367_row6_col0\" class=\"data row6 col0\" >16.05</td>\n      <td id=\"T_33367_row6_col1\" class=\"data row6 col1\" >7.83</td>\n      <td id=\"T_33367_row6_col2\" class=\"data row6 col2\" >26.45</td>\n    </tr>\n    <tr>\n      <th id=\"T_33367_level0_row7\" class=\"row_heading level0 row7\" >2014</th>\n      <td id=\"T_33367_row7_col0\" class=\"data row7 col0\" >0.71</td>\n      <td id=\"T_33367_row7_col1\" class=\"data row7 col1\" >16.34</td>\n      <td id=\"T_33367_row7_col2\" class=\"data row7 col2\" >12.37</td>\n    </tr>\n    <tr>\n      <th id=\"T_33367_level0_row8\" class=\"row_heading level0 row8\" >2015</th>\n      <td id=\"T_33367_row8_col0\" class=\"data row8 col0\" >14.09</td>\n      <td id=\"T_33367_row8_col1\" class=\"data row8 col1\" >4.29</td>\n      <td id=\"T_33367_row8_col2\" class=\"data row8 col2\" >-0.76</td>\n    </tr>\n    <tr>\n      <th id=\"T_33367_level0_row9\" class=\"row_heading level0 row9\" >2016</th>\n      <td id=\"T_33367_row9_col0\" class=\"data row9 col0\" >12.56</td>\n      <td id=\"T_33367_row9_col1\" class=\"data row9 col1\" >9.86</td>\n      <td id=\"T_33367_row9_col2\" class=\"data row9 col2\" >11.20</td>\n    </tr>\n    <tr>\n      <th id=\"T_33367_level0_row10\" class=\"row_heading level0 row10\" >2017</th>\n      <td id=\"T_33367_row10_col0\" class=\"data row10 col0\" >-0.35</td>\n      <td id=\"T_33367_row10_col1\" class=\"data row10 col1\" >3.30</td>\n      <td id=\"T_33367_row10_col2\" class=\"data row10 col2\" >18.48</td>\n    </tr>\n    <tr>\n      <th id=\"T_33367_level0_row11\" class=\"row_heading level0 row11\" >2018</th>\n      <td id=\"T_33367_row11_col0\" class=\"data row11 col0\" >4.36</td>\n      <td id=\"T_33367_row11_col1\" class=\"data row11 col1\" >-4.80</td>\n      <td id=\"T_33367_row11_col2\" class=\"data row11 col2\" >-7.01</td>\n    </tr>\n    <tr>\n      <th id=\"T_33367_level0_row12\" class=\"row_heading level0 row12\" >2019</th>\n      <td id=\"T_33367_row12_col0\" class=\"data row12 col0\" >13.26</td>\n      <td id=\"T_33367_row12_col1\" class=\"data row12 col1\" >3.67</td>\n      <td id=\"T_33367_row12_col2\" class=\"data row12 col2\" >28.65</td>\n    </tr>\n    <tr>\n      <th id=\"T_33367_level0_row13\" class=\"row_heading level0 row13\" >2020</th>\n      <td id=\"T_33367_row13_col0\" class=\"data row13 col0\" >4.06</td>\n      <td id=\"T_33367_row13_col1\" class=\"data row13 col1\" >21.99</td>\n      <td id=\"T_33367_row13_col2\" class=\"data row13 col2\" >15.09</td>\n    </tr>\n    <tr>\n      <th id=\"T_33367_level0_row14\" class=\"row_heading level0 row14\" >2021</th>\n      <td id=\"T_33367_row14_col0\" class=\"data row14 col0\" >-8.24</td>\n      <td id=\"T_33367_row14_col1\" class=\"data row14 col1\" >0.35</td>\n      <td id=\"T_33367_row14_col2\" class=\"data row14 col2\" >28.79</td>\n    </tr>\n    <tr>\n      <th id=\"T_33367_level0_row15\" class=\"row_heading level0 row15\" >2022</th>\n      <td id=\"T_33367_row15_col0\" class=\"data row15 col0\" >4.17</td>\n      <td id=\"T_33367_row15_col1\" class=\"data row15 col1\" >-5.55</td>\n      <td id=\"T_33367_row15_col2\" class=\"data row15 col2\" >-19.95</td>\n    </tr>\n    <tr>\n      <th id=\"T_33367_level0_row16\" class=\"row_heading level0 row16\" >Mean</th>\n      <td id=\"T_33367_row16_col0\" class=\"data row16 col0\" >6.43</td>\n      <td id=\"T_33367_row16_col1\" class=\"data row16 col1\" >6.44</td>\n      <td id=\"T_33367_row16_col2\" class=\"data row16 col2\" >7.11</td>\n    </tr>\n    <tr>\n      <th id=\"T_33367_level0_row17\" class=\"row_heading level0 row17\" >Median</th>\n      <td id=\"T_33367_row17_col0\" class=\"data row17 col0\" >4.12</td>\n      <td id=\"T_33367_row17_col1\" class=\"data row17 col1\" >4.23</td>\n      <td id=\"T_33367_row17_col2\" class=\"data row17 col2\" >11.44</td>\n    </tr>\n  </tbody>\n</table>\n"
+      "text/plain": "<pandas.io.formats.style.Styler at 0x7f67ae8691b0>",
+      "text/html": "<style type=\"text/css\">\n</style>\n<table id=\"T_f735d\">\n  <thead>\n    <tr>\n      <th class=\"blank level0\" >&nbsp;</th>\n      <th id=\"T_f735d_level0_col0\" class=\"col_heading level0 col0\" >Pairs</th>\n      <th id=\"T_f735d_level0_col1\" class=\"col_heading level0 col1\" >Random</th>\n      <th id=\"T_f735d_level0_col2\" class=\"col_heading level0 col2\" >SPY</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th id=\"T_f735d_level0_row0\" class=\"row_heading level0 row0\" >2007</th>\n      <td id=\"T_f735d_row0_col0\" class=\"data row0 col0\" >1.12</td>\n      <td id=\"T_f735d_row0_col1\" class=\"data row0 col1\" >5.81</td>\n      <td id=\"T_f735d_row0_col2\" class=\"data row0 col2\" >-3.12</td>\n    </tr>\n    <tr>\n      <th id=\"T_f735d_level0_row1\" class=\"row_heading level0 row1\" >2008</th>\n      <td id=\"T_f735d_row1_col0\" class=\"data row1 col0\" >36.89</td>\n      <td id=\"T_f735d_row1_col1\" class=\"data row1 col1\" >3.45</td>\n      <td id=\"T_f735d_row1_col2\" class=\"data row1 col2\" >-37.74</td>\n    </tr>\n    <tr>\n      <th id=\"T_f735d_level0_row2\" class=\"row_heading level0 row2\" >2009</th>\n      <td id=\"T_f735d_row2_col0\" class=\"data row2 col0\" >-2.88</td>\n      <td id=\"T_f735d_row2_col1\" class=\"data row2 col1\" >23.63</td>\n      <td id=\"T_f735d_row2_col2\" class=\"data row2 col2\" >19.88</td>\n    </tr>\n    <tr>\n      <th id=\"T_f735d_level0_row3\" class=\"row_heading level0 row3\" >2010</th>\n      <td id=\"T_f735d_row3_col0\" class=\"data row3 col0\" >9.06</td>\n      <td id=\"T_f735d_row3_col1\" class=\"data row3 col1\" >4.18</td>\n      <td id=\"T_f735d_row3_col2\" class=\"data row3 col2\" >10.96</td>\n    </tr>\n    <tr>\n      <th id=\"T_f735d_level0_row4\" class=\"row_heading level0 row4\" >2011</th>\n      <td id=\"T_f735d_row4_col0\" class=\"data row4 col0\" >-5.36</td>\n      <td id=\"T_f735d_row4_col1\" class=\"data row4 col1\" >11.95</td>\n      <td id=\"T_f735d_row4_col2\" class=\"data row4 col2\" >-1.22</td>\n    </tr>\n    <tr>\n      <th id=\"T_f735d_level0_row5\" class=\"row_heading level0 row5\" >2012</th>\n      <td id=\"T_f735d_row5_col0\" class=\"data row5 col0\" >3.32</td>\n      <td id=\"T_f735d_row5_col1\" class=\"data row5 col1\" >-3.18</td>\n      <td id=\"T_f735d_row5_col2\" class=\"data row5 col2\" >11.69</td>\n    </tr>\n    <tr>\n      <th id=\"T_f735d_level0_row6\" class=\"row_heading level0 row6\" >2013</th>\n      <td id=\"T_f735d_row6_col0\" class=\"data row6 col0\" >16.05</td>\n      <td id=\"T_f735d_row6_col1\" class=\"data row6 col1\" >7.83</td>\n      <td id=\"T_f735d_row6_col2\" class=\"data row6 col2\" >26.45</td>\n    </tr>\n    <tr>\n      <th id=\"T_f735d_level0_row7\" class=\"row_heading level0 row7\" >2014</th>\n      <td id=\"T_f735d_row7_col0\" class=\"data row7 col0\" >0.71</td>\n      <td id=\"T_f735d_row7_col1\" class=\"data row7 col1\" >16.34</td>\n      <td id=\"T_f735d_row7_col2\" class=\"data row7 col2\" >12.37</td>\n    </tr>\n    <tr>\n      <th id=\"T_f735d_level0_row8\" class=\"row_heading level0 row8\" >2015</th>\n      <td id=\"T_f735d_row8_col0\" class=\"data row8 col0\" >14.09</td>\n      <td id=\"T_f735d_row8_col1\" class=\"data row8 col1\" >4.29</td>\n      <td id=\"T_f735d_row8_col2\" class=\"data row8 col2\" >-0.76</td>\n    </tr>\n    <tr>\n      <th id=\"T_f735d_level0_row9\" class=\"row_heading level0 row9\" >2016</th>\n      <td id=\"T_f735d_row9_col0\" class=\"data row9 col0\" >12.56</td>\n      <td id=\"T_f735d_row9_col1\" class=\"data row9 col1\" >9.86</td>\n      <td id=\"T_f735d_row9_col2\" class=\"data row9 col2\" >11.20</td>\n    </tr>\n    <tr>\n      <th id=\"T_f735d_level0_row10\" class=\"row_heading level0 row10\" >2017</th>\n      <td id=\"T_f735d_row10_col0\" class=\"data row10 col0\" >-0.35</td>\n      <td id=\"T_f735d_row10_col1\" class=\"data row10 col1\" >3.30</td>\n      <td id=\"T_f735d_row10_col2\" class=\"data row10 col2\" >18.48</td>\n    </tr>\n    <tr>\n      <th id=\"T_f735d_level0_row11\" class=\"row_heading level0 row11\" >2018</th>\n      <td id=\"T_f735d_row11_col0\" class=\"data row11 col0\" >4.36</td>\n      <td id=\"T_f735d_row11_col1\" class=\"data row11 col1\" >-4.80</td>\n      <td id=\"T_f735d_row11_col2\" class=\"data row11 col2\" >-7.01</td>\n    </tr>\n    <tr>\n      <th id=\"T_f735d_level0_row12\" class=\"row_heading level0 row12\" >2019</th>\n      <td id=\"T_f735d_row12_col0\" class=\"data row12 col0\" >13.26</td>\n      <td id=\"T_f735d_row12_col1\" class=\"data row12 col1\" >3.67</td>\n      <td id=\"T_f735d_row12_col2\" class=\"data row12 col2\" >28.65</td>\n    </tr>\n    <tr>\n      <th id=\"T_f735d_level0_row13\" class=\"row_heading level0 row13\" >2020</th>\n      <td id=\"T_f735d_row13_col0\" class=\"data row13 col0\" >4.06</td>\n      <td id=\"T_f735d_row13_col1\" class=\"data row13 col1\" >21.99</td>\n      <td id=\"T_f735d_row13_col2\" class=\"data row13 col2\" >15.09</td>\n    </tr>\n    <tr>\n      <th id=\"T_f735d_level0_row14\" class=\"row_heading level0 row14\" >2021</th>\n      <td id=\"T_f735d_row14_col0\" class=\"data row14 col0\" >-8.24</td>\n      <td id=\"T_f735d_row14_col1\" class=\"data row14 col1\" >0.35</td>\n      <td id=\"T_f735d_row14_col2\" class=\"data row14 col2\" >28.79</td>\n    </tr>\n    <tr>\n      <th id=\"T_f735d_level0_row15\" class=\"row_heading level0 row15\" >2022</th>\n      <td id=\"T_f735d_row15_col0\" class=\"data row15 col0\" >4.17</td>\n      <td id=\"T_f735d_row15_col1\" class=\"data row15 col1\" >-5.55</td>\n      <td id=\"T_f735d_row15_col2\" class=\"data row15 col2\" >-19.95</td>\n    </tr>\n    <tr>\n      <th id=\"T_f735d_level0_row16\" class=\"row_heading level0 row16\" >Mean</th>\n      <td id=\"T_f735d_row16_col0\" class=\"data row16 col0\" >6.43</td>\n      <td id=\"T_f735d_row16_col1\" class=\"data row16 col1\" >6.44</td>\n      <td id=\"T_f735d_row16_col2\" class=\"data row16 col2\" >7.11</td>\n    </tr>\n    <tr>\n      <th id=\"T_f735d_level0_row17\" class=\"row_heading level0 row17\" >Median</th>\n      <td id=\"T_f735d_row17_col0\" class=\"data row17 col0\" >4.12</td>\n      <td id=\"T_f735d_row17_col1\" class=\"data row17 col1\" >4.23</td>\n      <td id=\"T_f735d_row17_col2\" class=\"data row17 col2\" >11.44</td>\n    </tr>\n  </tbody>\n</table>\n"
      },
-     "execution_count": 73,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2525,7 +2531,7 @@
    "cell_type": "markdown",
    "source": [
     "<p>\n",
-    "The yearly returns for the pairs portfolio, the random pairs portfolio, and SPY are shown above.  The yearly returns for the\n",
+    "The yearly returns (as a percentage) for the pairs portfolio, the random pairs portfolio, and SPY are shown above.  The yearly returns for the\n",
     "cointegrated pairs and the random pairs are similar (the average returns are almost the same). The random pairs use a seeded random\n",
     "number generator, so the random pairs selected will always be the same over multiple runs of the notebook.\n",
     "</p>\n",
